[#3770072] Displays a message for empty account list on dashboard
  * Adds missing spec for PivotalTracker module

--- a/app/views/home/dashboard.html.haml
+++ b/app/views/home/dashboard.html.haml
@@ -4,3 +4,5 @@
   %ul
     - @account_names.each do |account_name|
       %li= link_to account_name, "#"
+- else
+  %p No account with active projects available.
