[#3770072] Adds overall project velocity to iteration overview
 * Calculates overall velocity for an accounts' projects
 * Adds capybara generated HTML files to gitignore

--- a/app/views/home/dashboard.html.haml
+++ b/app/views/home/dashboard.html.haml
@@ -3,6 +3,6 @@
 - unless @account_names.empty?
   %ul
     - @account_names.each do |account_name|
-      %li= link_to account_name, "#"
+      %li= link_to account_name, iteration_plan_path(:account_name => account_name.to_slug)
 - else
   %p No account with active projects available.
