--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,4 +21,4 @@
         = yield
       %aside
         = yield :aside
-      %footer Copyright &copy; 2010, GitPit
+      %footer Copyright &copy; 2010, Secret Sauce Partners, Inc.
