[#3770072] Shows current stories on iteration overview page
 * Fixes gitpit lib LOAD_PATH issue
 * Adds scenario for current iteration
 * Fixes Pivotal Tracker environment-based configuration
 * Simplifies testing with Pivotal Tracker
 * Mock Gitpit methods in the unit specs, not the PT gem methods
 * Simplifies testing method of iteration overview feature
 * Replaces Cucumber table hash keys with symbols for better readability
 * Simplifies stubbing of account names and account's overall velocity
 * Fixes weird rails.js issue
 * Revised iteration overview scenario

--- a/app/views/iteration_plan/show.html.haml
+++ b/app/views/iteration_plan/show.html.haml
@@ -1,1 +1,6 @@
 %p.velocity= "Overall velocity: #{@overall_velocity}"
+
+#current-iteration-panel
+  %ul
+    - @current_stories.each do |story|
+      %li= story.name
