--- a/app/stylesheets/partials/_base.scss
+++ b/app/stylesheets/partials/_base.scss
@@ -8,6 +8,10 @@ $blueprint-grid-columns: 24;
 $blueprint-container-size: 950px;
 $blueprint-grid-margin: 10px;
 
+// Content takes up the whole grid (minus prepend / append)
+$content-columns: 22;
+$sprite-default-size: 18px;
+
 // Use this to calculate the width based on the total width.
 // Or you can set !blueprint_grid_width to a fixed value and unset !blueprint_container_size -- it will be calculated for you.
 $blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $blueprint-grid-columns - $blueprint-grid-margin;
@@ -18,3 +22,6 @@ $blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $b
 
 // Import all compass utilities
 @import "compass/utilities";
+
+// CSS3
+@import "compass/css3";
