--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -20,28 +20,185 @@ header, footer, nav, section, aside, article {
   @include container;
   // @include showgrid;
 }
+
 header, footer, nav {
   @include column($blueprint-grid-columns);
 }
-nav ul {
-  @include horizontal-list;
-}
-section#content {
-  // Two thirds of the grid columns, rounding up and border on the right.
-  // With 24 cols, this is 16.
-  $content-columns: ceil(2 * $blueprint-grid-columns / 3 - 1);
-  // true means it's the last column in the row
-  @include column($content-columns);
-  @include colborder;
-  padding-left: 10px;
-  width: $content-columns * $blueprint-grid-outer-width - 10px;
-}
-aside {
-  // One third of the grid columns, rounding down. With 24 cols, this is 8.
-  $sidebar-columns: floor($blueprint-grid-columns / 3);
-  @include column($sidebar-columns, true);
+
+nav {
+  @include append-bottom(2em);
+
+  padding: 10px 0;
+  background-color: #eee;
+
+  ul {
+    @include horizontal-list;
+    padding-left: 1em;
+
+    li {
+
+      a {
+        font-size: 1.2em;
+        color: #444;
+        text-decoration: none;
+
+        &:hover {
+         text-decoration: underline;
+        }
+      }
+
+      &.caption {
+        @include float-right;
+        font-size: 1.2em;
+      }
+
+    }
+  }
 }
 
+section#content {
+  @include prepend(1);
+  @include column($content-columns, true);
+  @include append(1);
+
+  .panel {
+    $panel-count: 2;
+    @include column($content-columns / $panel-count);
+    &.last {
+      @include last;
+    }
+
+    ul {
+      @include no-bullet;
+      padding: 0;
+      margin: 0;
+
+      li {
+        line-height: 2em;
+        border-bottom: 1px solid #999;
+        padding: 0;
+        width: 430px;
+        clear: both;
+
+        span {
+          padding: 0 5px;
+          display: block;
+          float: left;
+          height: 2em;
+          &.name {
+            a {
+              color: #112138;
+              text-decoration: none;
+            }
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+          &.project {
+            width: 75px;
+            border-right: 1px solid #999;
+            border-bottom: 1px solid #999;
+
+            a {
+              color: white;
+              text-decoration: none;
+
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+
+            &.color-0 {
+              background: #cd0028;
+            }
+
+            &.color-1 {
+              background: #cd00ab;
+            }
+
+            &.color-2 {
+              background: #8b0006;
+            }
+
+            &.color-3 {
+              background: #6200c3;
+            }
+
+            &.color-4 {
+              background: #000eb6;
+            }
+
+            &.color-5 {
+              background: #0079b3;
+            }
+
+            &.color-6 {
+              background: #00afa9;
+            }
+
+            &.color-7 {
+              background: #00b21d;
+            }
+
+            &.color-8 {
+              background: #8ba100;
+            }
+
+            &.color-9 {
+              background: #957400;
+            }
+
+            &.color-10 {
+              background: #951200;
+            }
+          }
+
+          &.story-type {
+            width: 18px;
+            padding: 0;
+            &.chore, &.bug, &.feature {
+              @include sprite-background("/images/gitpit-icons.png", 18px, 18px);
+              margin: 3px 0 0 2px;
+            }
+            &.feature {
+              @include sprite-column(1);
+            }
+            &.bug {
+              @include sprite-column(2);
+            }
+            &.chore {
+              @include sprite-column(3);
+            }
+          }
+
+          &.name {
+            width: 260px;
+          }
+
+          &.estimation {
+            width: 12px;
+          }
+        }
+      }
+
+    }
+
+    @include border-top-radius(10px);
+    @include linear-gradient(color-stops(#f0f0f0, #d5dde1));
+    @include box-shadow(#a0a0a0, 2px, 2px, 2px);
+
+    h2 {
+      background: #e0e0e0;
+      font-size: 10pt;
+      line-height: 2em;
+      padding: 0 10px;
+      margin: 0;
+      border-bottom: 1px solid #999;
+
+      @include border-top-radius(10px);
+    }
+  }
+}
 header {
   position: relative;
   #user-panel {
