--- a/app/views/iteration_plan/show.html.haml
+++ b/app/views/iteration_plan/show.html.haml
@@ -1,6 +1,15 @@
-%p.velocity= "Overall velocity: #{@overall_velocity}"
+- content_for :breadcrumb do
+  »
+  = link_to "Integration Overview", iteration_plan_path( params[:account_name] )
 
-#current-iteration-panel
+- content_for :overall_velocity do
+  %li.caption= "Overall velocity: #{@overall_velocity}"
+
+%section#current-iteration-panel.panel
+  %h2 Current
   %ul
-    - @current_stories.each do |story|
-      %li= story.name
+    =render :partial => "story", :collection => @current_stories, :as => :story
+%section#backlog-panel.last.panel
+  %h2 Backlog
+  %ul
+    =render :partial => "story", :collection => @backlog_stories, :as => :story
