Shows backlog stories on iteration overview page

--- a/app/views/iteration_plan/show.html.haml
+++ b/app/views/iteration_plan/show.html.haml
@@ -4,3 +4,7 @@
   %ul
     - @current_stories.each do |story|
       %li= story.name
+#backlog-panel
+  %ul
+    - @backlog_stories.each do |story|
+      %li= story.name
