--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -18,7 +18,7 @@ header, footer, nav, section, aside, article {
 
 .container {
   @include container;
-  // @include showgrid;
+  @include showgrid;
 }
 header, footer, nav {
   @include column($blueprint-grid-columns);
@@ -27,21 +27,46 @@ nav ul {
   @include horizontal-list;
 }
 section#content {
-  // Two thirds of the grid columns, rounding up and border on the right.
-  // With 24 cols, this is 16.
-  $content-columns: ceil(2 * $blueprint-grid-columns / 3 - 1);
-  // true means it's the last column in the row
-  @include column($content-columns);
-  @include colborder;
-  padding-left: 10px;
-  width: $content-columns * $blueprint-grid-outer-width - 10px;
-}
-aside {
-  // One third of the grid columns, rounding down. With 24 cols, this is 8.
-  $sidebar-columns: floor($blueprint-grid-columns / 3);
-  @include column($sidebar-columns, true);
-}
+  @include prepend(1);
+  @include column($content-columns, true);
+  @include append(1);
+  
+  ul {
+    @include no-bullet;
+    padding: 0;
+    margin: 0;
+    
+    li {
+      line-height: 2em;
+      border-bottom: 1px solid #999;
+      padding: 0 10px;
+    }
+    
+  }
 
+  .panel {
+    $panel-count: 2;
+    @include column($content-columns / $panel-count);
+    &.last {
+      @include last;
+    }
+
+    @include border-top-radius(10px);
+    @include linear-gradient(color-stops(#d0d0d0, #b5bdc1));
+    @include box-shadow(#a0a0a0, 2px, 2px, 2px);
+
+    h2 {
+      background: #e0e0e0;
+      font-size: 10pt;
+      line-height: 2em;
+      padding: 0 10px;
+      margin: 0;
+      border-bottom: 1px solid #999;
+      
+      @include border-top-radius(10px);
+    }
+  }
+}
 header {
   position: relative;
   #user-panel {
