--- a/app/stylesheets/partials/_base.scss
+++ b/app/stylesheets/partials/_base.scss
@@ -10,6 +10,7 @@ $blueprint-grid-margin: 10px;
 
 // Content takes up the whole grid (minus prepend / append)
 $content-columns: 22;
+$sprite-default-size: 18px;
 
 // Use this to calculate the width based on the total width.
 // Or you can set !blueprint_grid_width to a fixed value and unset !blueprint_container_size -- it will be calculated for you.
