--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,10 @@
         = user_panel
       %nav
         %ul
-          %li= link_to "Home", "/"
+          = yield :overall_velocity
+          %li
+            = link_to "Home", "/"
+            = yield :breadcrumb
       %section#content
         = flash_messages
         = yield
